[package]
name = "tokio"
version = "0.1.0"
authors = ["kelvin <me@gnux.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.3"
bytes = "0.4"
byteorder = "1.2"
fnv = "1.0"
futures = "0.1"
tokio = "0.1.22"
tokio-codec = "0.1.1"
tokio-io = "0.1.12"
log = "0.4.6"

[dev-dependencies]
env_logger = "0.6"